# kabu

./: .gitignore  GEMINI.md  README.md  data_j.csv  pyproject.toml  ruff.toml
kabu/: __init__.py  settings.py  test_practice.py  test_xx.py
kabu/features/: __init__.py
kabu/features/short_squeeze_search/: __init__.py
kabu/features/undervalued_search/: __init__.py  repo.py  test_undervalued.py  usecase.py
kabu/features/undervalued_search/domain/: __init__.py  model.py  service.py  test_domain.py
kabu/features/undervalued_search/repo/: __init__.py  source.py  test_repo.py
kabu/shared/: __init__.py  settings.py  types.py  utils.py  visualize.py
kabu/shared/source/: __init__.py  jquants.py  stock_price.py  test_source.py
